--- a/pallets/mandate/Cargo.toml
+++ b/pallets/mandate/Cargo.toml
@@ -24,9 +24,9 @@ serde = { version = "1.0.152", optional = true, features = ["derive"] }
 scale-info = { version = "2.0.1", default-features = false, features = [
   "derive",
 ] }
-frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, branch = "release-polkadot-v1.5.0" }
-frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
+frame-benchmarking = { workspace = true, default-features = false, optional = true}
+frame-support = { workspace = true, default-features = false}
+frame-system = { workspace = true, default-features = false}
+sp-io = { workspace = true, default-features = false}
+sp-runtime = { workspace = true, default-features = false}
+sp-std = { workspace = true, default-features = false}
