--- a/pallets/sponsorship/Cargo.toml
+++ b/pallets/sponsorship/Cargo.toml
@@ -15,21 +15,21 @@ codec = { package = "parity-scale-codec", version = "3.2.2", default-features = 
 	"derive",
 ] }
 scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
-frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true, branch = "release-polkadot-v1.5.0" }
-frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
-sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
+frame-benchmarking = { workspace = true, default-features = false, optional = true}
+frame-support = { workspace = true, default-features = false}
+frame-system = { workspace = true, default-features = false}
+pallet-transaction-payment = { workspace = true, default-features = false}
+sp-io = { workspace = true, default-features = false}
+sp-runtime = { workspace = true, default-features = false}
+sp-std = { workspace = true, default-features = false}
 support = { path = "../../support", default-features = false }
 log = { version = "0.4.17", default-features = false }
 
 [dev-dependencies]
-pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
-pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
-sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.5.0" }
-sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
+pallet-balances = { workspace = true }
+pallet-uniques = { workspace = true }
+sp-core = { workspace = true }
+sp-state-machine = { workspace = true, default-features = false}
 
 
 [features]
