--- a/support/Cargo.toml
+++ b/support/Cargo.toml
@@ -9,7 +9,7 @@ codec = { package = "parity-scale-codec", version = "3.2.2", default-features = 
     "derive",
 ] }
 scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
-frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.5.0" }
+frame-support = { workspace = true, default-features = false}
 
 [features]
 default = ["std"]
