Dwellir hostname change

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ env:
   toolchain: stable
   target: wasm32-unknown-unknown
   try-runtime-chain: dev
-  try-runtime-uri: wss://eden-api.dwellir.com:443/
+  try-runtime-uri: wss://api-eden.dwellir.com:443/
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
   RUSTFLAGS: ""
