--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -47,6 +47,8 @@ std = [
   "xcm/std",
   "xcm-builder/std",
   "xcm-executor/std",
+  "orml-xtokens/std",
+  "orml-traits/std",
   "cumulus-pallet-aura-ext/std",
   "cumulus-pallet-dmp-queue/std",
   "cumulus-pallet-parachain-system/std",
@@ -152,6 +154,7 @@ try-runtime = [
   "cumulus-pallet-xcmp-queue/try-runtime",
   "pallet-xcm/try-runtime",
   "parachain-info/try-runtime",
+  "orml-xtokens/try-runtime",
   "cumulus-pallet-parachain-system/try-runtime",
   "pallet-message-queue/try-runtime"
 ]
@@ -243,6 +246,9 @@ pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
 pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
+
+orml-xtokens = { version = "0.7.0", default-features = false }
+orml-traits = { version = "0.7.0", default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { workspace = true }
