--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,17 @@
 members = ["node", "pallets/*", "primitives", "runtimes/*", "support"]
 resolver = "1"
 
+[workspace.package]
+version= "2.5.0"
+authors = ["Nodle Developers <eng@nodle.com>"]
+
 [profile.release]
 # Substrate runtime requires unwind apparently, and anyways it gives more useful
 # panic messages which can be useful for troubleshooting purposes
 panic = "unwind"
 
 [workspace.dependencies]
+#Polkadot-SDK
 cumulus-client-cli = { version = "0.7.0", default-features = false }
 cumulus-client-collator = { version = "0.7.0", default-features = false }
 cumulus-client-consensus-aura = { version = "0.7.0", default-features = false }
@@ -114,3 +119,7 @@ substrate-wasm-builder = { version = "17.0.0", default-features = false }
 xcm-builder = { package="staging-xcm-builder", version = "7.0.0", default-features = false }
 xcm-executor = { package="staging-xcm-executor", version = "7.0.0", default-features = false }
 xcm = { package = "staging-xcm", version = "7.0.0", default-features = false}
+
+#ORML
+orml-xtokens = { version = "0.7.0", default-features = false }
+orml-traits = { version = "0.7.0", default-features = false }
