--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2021"
 name = "runtime-eden"
-version = "2.4.2"
+version = { workspace = true }
 
 [features]
 default = ["std"]
@@ -247,8 +247,8 @@ pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
 pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
 
-orml-xtokens = { version = "0.7.0", default-features = false }
-orml-traits = { version = "0.7.0", default-features = false }
+orml-xtokens = { workspace = true, default-features = false }
+orml-traits = { workspace = true, default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { workspace = true }
