--- a/pallets/allocations/Cargo.toml
+++ b/pallets/allocations/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-allocations"
-version = "2.4.2"
+version = { workspace = true }
 authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
 edition = "2021"
 description = "A pallet to handle the Proof Of Connectivity allocations rewards"
