--- a/pallets/mandate/Cargo.toml
+++ b/pallets/mandate/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-mandate"
-version = "2.4.2"
+version = { workspace = true }
 authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
 edition = "2021"
 
