--- a/pallets/uniques/Cargo.toml
+++ b/pallets/uniques/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-nodle-uniques"
-version = "2.4.2"
+version = { workspace = true }
 authors = ["Nodle <support@nodle.com>"]
 edition = "2021"
 
