--- a/support/Cargo.toml
+++ b/support/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["Nodle Developers <eng@nodle.com>"]
 edition = "2021"
 name = "support"
-version = "2.4.2"
+version = { workspace = true }
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
