--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ resolver = "1"
 [workspace.package]
 version= "2.5.0"
 authors = ["Nodle Developers <eng@nodle.com>"]
+edition = "2021"
 
 [profile.release]
 # Substrate runtime requires unwind apparently, and anyways it gives more useful
