--- a/pallets/uniques/Cargo.toml
+++ b/pallets/uniques/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pallet-nodle-uniques"
 version = { workspace = true }
-authors = ["Nodle <support@nodle.com>"]
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
 
 [features]
 default = ["std"]
