--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
 name = "runtime-eden"
 version = { workspace = true }
 
