--- a/support/Cargo.toml
+++ b/support/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-authors = ["Nodle Developers <eng@nodle.com>"]
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
 name = "support"
 version = { workspace = true }
 
