--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-authors = ["Nodle <support@nodle.com>", "Parity Technologies <admin@parity.io>"]
+authors = { workspace = true }
 build = "build.rs"
-edition = "2021"
+edition = { workspace = true }
 name = "nodle-parachain"
 version = { workspace = true }
 
