--- a/pallets/allocations/Cargo.toml
+++ b/pallets/allocations/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pallet-allocations"
 version = { workspace = true }
-authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
 description = "A pallet to handle the Proof Of Connectivity allocations rewards"
 
 [features]
