--- a/pallets/reserve/Cargo.toml
+++ b/pallets/reserve/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pallet-reserve"
 version = { workspace = true }
-authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
 
 [features]
 default = ["std"]
