--- a/pallets/sponsorship/Cargo.toml
+++ b/pallets/sponsorship/Cargo.toml
@@ -2,8 +2,8 @@
 name = "pallet-sponsorship"
 version = { workspace = true }
 description = "Nodle pallet to allow sponsors to cover fees and reserves needed for a predefined category of calls for their registered users"
-authors = ["Nodle Developers <eng@nodle.com>"]
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
 license = "Apache-2.0"
 publish = false
 
