--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,3 +124,16 @@ xcm = { package = "staging-xcm", version = "7.0.0", default-features = false}
 #ORML
 orml-xtokens = { version = "0.7.0", default-features = false }
 orml-traits = { version = "0.7.0", default-features = false }
+
+#Crates
+clap = { version = "4.1.8", features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false}
+getrandom = { version = "0.2", features = ["js"] }
+hex-literal = { version = "0.4.1" }
+jsonrpsee = { version = "0.16.2", features = ["server"] }
+lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
+log = { version = "0.4.17", default-features = false }
+safe-mix = { version = "1.0.1", default-features = false }
+scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0.152", default-features = false }
+derive_more = "0.99.2"
