--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -22,18 +22,18 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
-clap = { version = "4.1.8", features = ["derive"] }
-derive_more = "0.99.2"
-log = "0.4.17"
-codec = { package = "parity-scale-codec", version = "3.0.0" }
-serde = { version = "1.0.152", features = ["derive"] }
+clap = { workspace = true, features = ["derive"] }
+derive_more = { workspace = true }
+log = { workspace = true, default-features = true}
+codec = { workspace = true }
+serde = { workspace = true , features = ["derive"] }
 
 # RPC related Dependencies
-jsonrpsee = { version = "0.16.2", features = ["server"] }
+jsonrpsee = { workspace =true , features = ["server"] }
 
 # Local Dependencies
 runtime-eden = { path = "../runtimes/eden" }
-primitives = { version = "2.0.17", path = "../primitives" }
+primitives = { path = "../primitives" }
 
 # Substrate Dependencies
 frame-benchmarking = { workspace = true }
@@ -41,7 +41,7 @@ frame-benchmarking-cli = { workspace = true }
 
 pallet-transaction-payment-rpc = { workspace = true }
 
-frame-rpc-system = { package = "substrate-frame-rpc-system", workspace = true }
+frame-rpc-system = { workspace = true }
 substrate-prometheus-endpoint = { workspace = true }
 
 ## Substrate Client Dependencies
@@ -98,7 +98,7 @@ polkadot-cli = { workspace = true }
 polkadot-parachain-primitives = { workspace = true }
 polkadot-primitives = { workspace = true }
 polkadot-service = { workspace = true }
-xcm = { package = "staging-xcm", workspace = true, default-features = false}
+xcm = { workspace = true, default-features = false}
 
 [dev-dependencies]
-hex-literal = "0.3.4"
+hex-literal = {workspace =true }
