--- a/pallets/sponsorship/Cargo.toml
+++ b/pallets/sponsorship/Cargo.toml
@@ -11,10 +11,8 @@ publish = false
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
-	"derive",
-] }
-scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
+codec = { workspace =true , default-features = false, features = ["derive"] }
+scale-info = { workspace =true, default-features = false, features = ["derive"] }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
@@ -23,7 +21,7 @@ sp-io = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
 support = { path = "../../support", default-features = false }
-log = { version = "0.4.17", default-features = false }
+log = { workspace =true , default-features = false }
 
 [dev-dependencies]
 pallet-balances = { workspace = true }
