--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -208,9 +208,9 @@ polkadot-parachain-primitives = { workspace = true, default-features = false }
 polkadot-runtime-common = { workspace = true, default-features = false }
 polkadot-primitives = { workspace = true, default-features = false }
 
-xcm = { package = "staging-xcm", workspace = true, default-features = false}
-xcm-builder = { package="staging-xcm-builder", workspace = true, default-features = false }
-xcm-executor = { package="staging-xcm-executor", workspace = true, default-features = false }
+xcm = { workspace = true, default-features = false}
+xcm-builder = { workspace = true, default-features = false }
+xcm-executor = { workspace = true, default-features = false }
 cumulus-pallet-aura-ext = { workspace = true, default-features = false }
 cumulus-pallet-dmp-queue = { workspace = true, default-features = false }
 cumulus-pallet-parachain-system = { workspace = true, default-features = false }
@@ -220,7 +220,7 @@ parachains-common = { workspace = true, default-features = false }
 cumulus-primitives-core = { workspace = true, default-features = false }
 cumulus-primitives-timestamp = { workspace = true, default-features = false }
 cumulus-primitives-utility = { workspace = true, default-features = false }
-parachain-info = { package = "staging-parachain-info", workspace = true, default-features = false }
+parachain-info = { workspace = true, default-features = false }
 sp-api = { workspace = true, default-features = false }
 sp-application-crypto = { workspace = true, default-features = false }
 sp-consensus-babe = { workspace = true, default-features = false }
