--- a/pallets/allocations/Cargo.toml
+++ b/pallets/allocations/Cargo.toml
@@ -26,10 +26,10 @@ runtime-benchmarks = [
 try-runtime = ["frame-support/try-runtime"]
 
 [dependencies]
-log = { version = "0.4.17", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-serde = { version = "1.0.152", optional = true, features = ["derive"] }
-scale-info = { version = "2.0.1", default-features = false, features = [  "derive",] }
+log = { workspace =true, default-features = false }
+codec = { workspace =true , default-features = false, features = ["derive"] }
+serde = { workspace =true , optional = true, features = ["derive"] }
+scale-info = { workspace =true , default-features = false, features = [  "derive",] }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
@@ -44,4 +44,4 @@ support = { path = "../../support", default-features = false }
 sp-tracing = { workspace = true, default-features = false }
 sp-core = { workspace = true, default-features = false }
 pallet-membership = { workspace = true, default-features = false }
-lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
+lazy_static = {workspace =true , default-features = false, features = ["spin_no_std"] }
