--- a/pallets/grants/Cargo.toml
+++ b/pallets/grants/Cargo.toml
@@ -30,10 +30,10 @@ runtime-benchmarks = [
 try-runtime = ["frame-support/try-runtime"]
 
 [dependencies]
-log = { version = "0.4.17", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-serde = { version = "1.0.152", optional = true }
-scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
+log = { workspace =true, default-features = false }
+codec = { workspace =true, default-features = false, features = ["derive"] }
+serde = { workspace =true, optional = true }
+scale-info = { workspace =true, default-features = false, features = ["derive"] }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
