--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -22,11 +22,9 @@ std = [
 ]
 
 [dependencies]
-serde = { version = "1.0.152", optional = true, features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-scale-info = { version = "2.0.1", default-features = false, features = [
-	"derive"
-] }
+serde = { workspace = true, optional = true, features = ["derive"] }
+codec = { workspace = true, default-features = false, features = ["derive"] }
+scale-info = { workspace = true, default-features = false, features = ["derive"] }
 frame-system = { workspace = true, default-features = false }
 frame-support = { workspace = true, default-features = false }
 sp-application-crypto = { workspace = true, default-features = false }
@@ -34,6 +32,6 @@ sp-core = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
 sp-consensus-aura = { workspace = true, default-features = false }
-xcm = { package = "staging-xcm", workspace = true, default-features = false}
-xcm-executor = { package="staging-xcm-executor", workspace = true, default-features = false }
+xcm = { workspace = true, default-features = false}
+xcm-executor = { workspace = true, default-features = false }
 polkadot-parachain-primitives = { workspace = true, default-features = false }
