--- a/pallets/uniques/Cargo.toml
+++ b/pallets/uniques/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pallet-nodle-uniques"
-version = { workspace = true }
-authors = { workspace = true }
-edition = { workspace = true }
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 
 [features]
 default = ["std"]
@@ -31,11 +31,9 @@ runtime-benchmarks = [
 ]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-serde = { version = "1.0.152", optional = true, features = ["derive"] }
-scale-info = { version = "2.0.1", default-features = false, features = [
-  "derive",
-] }
+codec = { workspace = true, default-features = false, features = ["derive"] }
+serde = { workspace =true, optional = true, features = ["derive"] }
+scale-info = { workspace = true, default-features = false, features = ["derive"] }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
