--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "primitives"
-version = { workspace = true }
-authors = { workspace = true }
-edition = { workspace = true }
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 
 [features]
 default = ["std"]
