--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-authors = { workspace = true }
-edition = { workspace = true }
+authors.workspace = true
+edition.workspace = true
 name = "runtime-eden"
-version = { workspace = true }
+version.workspace = true
 
 [features]
 default = ["std"]
@@ -160,17 +160,17 @@ try-runtime = [
 ]
 
 [dependencies]
-static_assertions = "1.1.0"
-getrandom = { version = "0.2", features = ["js"] }
-safe-mix = { version = "1.0.1", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-hex-literal = { version = "0.4.1" }
-log = { version = "0.4.17", default-features = false }
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
-serde = { version = "1.0.152", optional = true, features = ["derive"] }
-smallvec = "1.9.0"
+static_assertions.workspace = true
+getrandom = { workspace = true, features = ["js"] }
+safe-mix = { workspace = true, default-features = false }
+codec = { workspace = true, default-features = false, features = ["derive"] }
+hex-literal.workspace = true
+log = { workspace = true, default-features = false }
+scale-info = { workspace = true, default-features = false, features = ["derive"] }
+serde = { workspace = true, optional = true, features = ["derive"] }
+smallvec.workspace = true
+lazy_static = {workspace = true, default-features = false, features = ["spin_no_std"] }
 
-lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
 frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-executive = { workspace = true, default-features = false }
@@ -251,4 +251,4 @@ orml-xtokens = { workspace = true, default-features = false }
 orml-traits = { workspace = true, default-features = false }
 
 [build-dependencies]
-substrate-wasm-builder = { workspace = true }
+substrate-wasm-builder.workspace = true
