--- a/pallets/sponsorship/Cargo.toml
+++ b/pallets/sponsorship/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "pallet-sponsorship"
-version = { workspace = true }
+version.workspace = true
 description = "Nodle pallet to allow sponsors to cover fees and reserves needed for a predefined category of calls for their registered users"
-authors = { workspace = true }
-edition = { workspace = true }
+authors.workspace = true
+edition.workspace = true
 license = "Apache-2.0"
 publish = false
 
@@ -24,9 +24,9 @@ support = { path = "../../support", default-features = false }
 log = { workspace = true, default-features = false }
 
 [dev-dependencies]
-pallet-balances = { workspace = true }
-pallet-uniques = { workspace = true }
-sp-core = { workspace = true }
+pallet-balances.workspace = true
+pallet-uniques.workspace = true
+sp-core.workspace = true
 sp-state-machine = { workspace = true, default-features = false }
 
 
