Integrate proxy pallet

--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -31,6 +31,7 @@ std = [
   "pallet-reserve/std",
   "pallet-scheduler/std",
   "pallet-preimage/std",
+  "pallet-proxy/std",
   "pallet-session/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment/std",
@@ -95,6 +96,7 @@ runtime-benchmarks = [
   "pallet-reserve/runtime-benchmarks",
   "pallet-scheduler/runtime-benchmarks",
   "pallet-preimage/runtime-benchmarks",
+  "pallet-proxy/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-uniques/runtime-benchmarks",
   "pallet-nodle-uniques/runtime-benchmarks",
@@ -138,6 +140,7 @@ try-runtime = [
   "pallet-reserve/try-runtime",
   "pallet-scheduler/try-runtime",
   "pallet-preimage/try-runtime",
+  "pallet-proxy/try-runtime",
   "pallet-session/try-runtime",
   "pallet-timestamp/try-runtime",
   "pallet-transaction-payment/try-runtime",
@@ -189,6 +192,7 @@ pallet-offences = { workspace = true, default-features = false }
 pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
 pallet-scheduler = { workspace = true, default-features = false }
 pallet-preimage = { workspace = true, default-features = false }
+pallet-proxy = { workspace = true, default-features = false }
 pallet-session = { workspace = true, default-features = false }
 pallet-timestamp = { workspace = true, default-features = false }
 pallet-transaction-payment = { workspace = true, default-features = false }
