--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ pallet-message-queue = { version = "31.0.0", default-features = false }
 pallet-multisig = { version = "28.0.0", default-features = false }
 pallet-offences = { version = "27.0.0", default-features = false }
 pallet-preimage = { version = "28.0.0", default-features = false }
+pallet-proxy = { version = "28.0.0", default-features = false }
 pallet-scheduler = { version = "29.0.0", default-features = false }
 pallet-session = { version = "28.0.0", default-features = false }
 pallet-timestamp = { version = "27.0.0", default-features = false }
