Sponsorship for compound extrinsics

--- a/pallets/sponsorship/Cargo.toml
+++ b/pallets/sponsorship/Cargo.toml
@@ -39,6 +39,9 @@ std = [
 	"frame-support/std",
 	"frame-system/std",
 	"pallet-transaction-payment/std",
+	"pallet-balances/std",
+	"pallet-uniques/std",
+	"pallet-utility/std",
 	"scale-info/std",
 	"support/std",
 	"sp-io/std",
