Upgrade polkadot-sdk (#813)
* Upgrade to polkadot 1.1.0 (#800)
* Upgrade towards 1.1.0
* Update CI version
* polkadot 1.1 dependencies
* Merge updates for benchmarks
* upgrade to polkadot 1.2.1 (#804)
* Upgrade to 1.2.0  integrate PreImage Pallet
* Test cases remove deprecated calls
* Upgrade to polkadot 1.3.0
* ORML force update
* Benchmark tests
* Migration for pallet_uniques
* Remove Clippy Warnings
* Remove dead code
* Upgrade to polkadot 1.4.0 (#814)
* Remove ReachableDest
* XCM config
* Use define_benchmarks!
* upgrade to polkadot 1.5.0 (#816)
* Upgrade to 1.5.0
* Remove migrations completed in Spec 27
* Use release tag
* Upgrade to 1.6.0
* Upgrade calls to 1.6.0 API
* Dwellir hostname change
* Update weights
* Update service.rs and command.rs from latest template
* Workspace dependencies
* Get substrate from crates.io
* Storage migrations
* Reintegrate orml
* Silence warning
* Cargo.toml reformat
* Fix failing benchmarks
* XCM benchmarks
* Clippy
* CI srtool
* Update weights
* Use benchmark for reserve_asset_deposited()
* Use only two collators for dev nets
* SR tool version
* Update runtimes/eden/src/pallets_parachain.rs
* Update runtimes/eden/src/pallets_util.rs
* Update node/src/command.rs
* Use Polkadot ED
* Integrate proxy pallet
* Add pallet_proxy benchmarks
* Separate weights for all pallets
* Code cleanup
* Benchmarks
* Auto fmt
* Refactor benchmark script
* feat(nodle-parachain): use wasm executor
* Remove sponsorship migration
* Default ports Relay chain default rpc port different from parachain default port
* Docker example in Readme verified to work
* The docker example uses all necessary parameters. Is readable and runable at the same time.
* Set base delivery fee in DOT derived constant


close CHA-407
close #738
close #825 
close #824 

---------

Co-authored-by: Alex Sedighi <alex@nodle.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ env:
   toolchain: stable
   target: wasm32-unknown-unknown
   try-runtime-chain: dev
-  try-runtime-uri: wss://eden-rpc.dwellir.com:443/
+  try-runtime-uri: wss://api-eden.dwellir.com:443/
   SCCACHE_GHA_ENABLED: "true"
   RUSTC_WRAPPER: "sccache"
   RUSTFLAGS: ""
@@ -37,7 +37,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Setup sccache
-        uses: mozilla-actions/sccache-action@v0.0.3
+        uses: mozilla-actions/sccache-action@v0.0.4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: ${{ env.toolchain }}
@@ -68,7 +68,7 @@ jobs:
         run: |
           sudo apt-get install protobuf-compiler
       - name: Setup sccache
-        uses: mozilla-actions/sccache-action@v0.0.3
+        uses: mozilla-actions/sccache-action@v0.0.4
       - name: Unit tests
         # Other tests ran below
         run: cargo test --all-features -p nodle-parachain
@@ -87,7 +87,7 @@ jobs:
         run: |
           sudo apt-get install protobuf-compiler
       - name: Setup sccache
-        uses: mozilla-actions/sccache-action@v0.0.3
+        uses: mozilla-actions/sccache-action@v0.0.4
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
       - name: Test and gather coverage
@@ -113,7 +113,7 @@ jobs:
           components: rust-src
           target: ${{ env.target }}
       - name: Setup sccache
-        uses: mozilla-actions/sccache-action@v0.0.3
+        uses: mozilla-actions/sccache-action@v0.0.4
       - name: Build runtime
         run: cargo build --release --features=try-runtime -p runtime-eden
       - name: Upload runtime artifact
