--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -16,11 +16,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Srtool build
         id: srtool_build
-        uses: chevdor/srtool-actions@v0.8.0
+        uses: chevdor/srtool-actions@v0.9.2
         with:
           chain: ${{ matrix.runtime }}
           package: runtime-${{ matrix.runtime }}
           runtime_dir: runtimes/${{ matrix.runtime }}
+          tag: 1.74.0
 
       - name: Summary
         run: |
