--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "primitives"
-version = "2.4.2"
-authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
-edition = "2021"
+version.workspace = true
+authors.workspace = true
+edition.workspace = true
 
 [features]
 default = ["std"]
@@ -18,22 +18,20 @@ std = [
 	"sp-consensus-aura/std",
 	"xcm-executor/std",
 	"xcm/std",
-	"polkadot-parachain/std"
+	"polkadot-parachain-primitives/std"
 ]
 
 [dependencies]
-serde = { version = "1.0.152", optional = true, features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-scale-info = { version = "2.0.1", default-features = false, features = [
-	"derive"
-] }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
+serde = { workspace = true, optional = true, features = ["derive"] }
+codec = { workspace = true, default-features = false, features = ["derive"] }
+scale-info = { workspace = true, default-features = false, features = ["derive"] }
+frame-system = { workspace = true, default-features = false }
+frame-support = { workspace = true, default-features = false }
+sp-application-crypto = { workspace = true, default-features = false }
+sp-core = { workspace = true, default-features = false }
+sp-runtime = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = false }
+sp-consensus-aura = { workspace = true, default-features = false }
+xcm = { workspace = true, default-features = false}
+xcm-executor = { workspace = true, default-features = false }
+polkadot-parachain-primitives = { workspace = true, default-features = false }
