--- a/support/Cargo.toml
+++ b/support/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
-authors = ["Nodle Developers <eng@nodle.com>"]
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
 name = "support"
-version = "2.4.2"
+version.workspace = true
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
-    "derive",
-] }
-scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
+codec = { workspace = true, default-features = false, features = ["derive"] }
+scale-info = { workspace = true, default-features = false, features = ["derive"] }
+frame-support = { workspace = true, default-features = false }
 
 [features]
 default = ["std"]
