--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,141 @@
 members = ["node", "pallets/*", "primitives", "runtimes/*", "support"]
 resolver = "1"
 
+[workspace.package]
+version= "2.5.0"
+authors = ["Nodle Developers <eng@nodle.com>"]
+edition = "2021"
+
 [profile.release]
 # Substrate runtime requires unwind apparently, and anyways it gives more useful
 # panic messages which can be useful for troubleshooting purposes
 panic = "unwind"
+
+[workspace.dependencies]
+#Polkadot-SDK
+cumulus-client-cli = { version = "0.7.0", default-features = false }
+cumulus-client-collator = { version = "0.7.0", default-features = false }
+cumulus-client-consensus-aura = { version = "0.7.0", default-features = false }
+cumulus-client-consensus-common = { version = "0.7.0", default-features = false }
+cumulus-client-service = { version = "0.7.0", default-features = false }
+cumulus-pallet-aura-ext = { version = "0.7.0", default-features = false }
+cumulus-pallet-dmp-queue = { version = "0.7.0", default-features = false }
+cumulus-pallet-parachain-system = { version = "0.7.0", default-features = false }
+cumulus-pallet-xcm = { version = "0.7.0", default-features = false }
+cumulus-pallet-xcmp-queue = { version = "0.7.0", default-features = false }
+cumulus-primitives-core = { version = "0.7.0", default-features = false }
+cumulus-primitives-parachain-inherent = { version = "0.7.0", default-features = false }
+cumulus-primitives-timestamp = { version = "0.7.0", default-features = false }
+cumulus-primitives-utility = { version = "0.7.0", default-features = false }
+cumulus-client-consensus-proposer = { version = "0.7.0", default-features = false}
+cumulus-relay-chain-inprocess-interface = { version = "0.7.0", default-features = false }
+cumulus-relay-chain-interface = { version = "0.7.0", default-features = false }
+cumulus-relay-chain-rpc-interface = { version = "0.7.0", default-features = false }
+frame-benchmarking-cli = { version = "32.0.0", default-features = false }
+frame-benchmarking = { version = "28.0.0", default-features = false }
+frame-executive = { version = "28.0.0", default-features = false }
+frame-rpc-system = { package = "substrate-frame-rpc-system", version = "28.0.0", default-features = false }
+frame-support = { version = "28.0.0", default-features = false }
+frame-system-benchmarking = { version = "28.0.0", default-features = false }
+frame-system = { version = "28.0.0", default-features = false }
+frame-system-rpc-runtime-api = { version = "26.0.0", default-features = false }
+frame-try-runtime = { version = "0.34.0", default-features = false }
+pallet-aura = { version = "27.0.0", default-features = false }
+pallet-authority-discovery = { version = "28.0.0", default-features = false }
+pallet-authorship = { version = "28.0.0", default-features = false }
+pallet-balances = { version = "28.0.0", default-features = false }
+pallet-collator-selection = { version = "9.0.0", default-features = false }
+pallet-collective = { version = "28.0.0", default-features = false }
+pallet-contracts = { version = "27.0.0", default-features = false }
+pallet-identity = { version = "28.0.0", default-features = false }
+pallet-im-online = { version = "27.0.0", default-features = false }
+pallet-insecure-randomness-collective-flip = { version = "16.0.0", default-features = false }
+pallet-membership = { version = "28.0.0", default-features = false }
+pallet-message-queue = { version = "31.0.0", default-features = false }
+pallet-multisig = { version = "28.0.0", default-features = false }
+pallet-offences = { version = "27.0.0", default-features = false }
+pallet-preimage = { version = "28.0.0", default-features = false }
+pallet-proxy = { version = "28.0.0", default-features = false }
+pallet-scheduler = { version = "29.0.0", default-features = false }
+pallet-session = { version = "28.0.0", default-features = false }
+pallet-timestamp = { version = "27.0.0", default-features = false }
+pallet-transaction-payment = { version = "28.0.0", default-features = false }
+pallet-transaction-payment-rpc = { version = "30.0.0", default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { version = "28.0.0", default-features = false }
+pallet-uniques = { version = "28.0.0", default-features = false }
+pallet-utility = { version = "28.0.0", default-features = false }
+pallet-xcm-benchmarks = { version = "7.0.0", default-features = false }
+pallet-xcm = { version = "7.0.0", default-features = false }
+parachain-info = { package = "staging-parachain-info", version = "0.7.0", default-features = false }
+parachains-common = { version = "7.0.0", default-features = false }
+polkadot-cli = { version = "7.0.0", default-features = false }
+polkadot-parachain-primitives = { version = "6.0.0", default-features = false }
+polkadot-primitives = { version = "7.0.0", default-features = false }
+polkadot-runtime-common = { version = "7.0.0", default-features = false }
+polkadot-service = { version = "7.0.0", default-features = false }
+sc-basic-authorship = { version = "0.34.0", default-features = false }
+sc-chain-spec = { version = "27.0.0", default-features = false }
+sc-client-api = { version = "28.0.0", default-features = false }
+sc-cli = { version = "0.36.0", default-features = false }
+sc-consensus = { version = "0.33.0", default-features = false }
+sc-executor = { version = "0.32.0", default-features = false }
+sc-keystore = { version = "25.0.0", default-features = false }
+sc-network = { version = "0.34.0", default-features = false }
+sc-network-sync = { version = "0.33.0", default-features = false }
+sc-rpc-api = { version = "0.33.0", default-features = false }
+sc-rpc = { version = "29.0.0", default-features = false }
+sc-service = { version = "0.35.0", default-features = false }
+sc-sysinfo = { version = "27.0.0", default-features = false }
+sc-telemetry = { version = "15.0.0", default-features = false }
+sc-tracing = { version = "28.0.0", default-features = false }
+sc-transaction-pool-api = { version = "28.0.0", default-features = false }
+sc-transaction-pool = { version = "28.0.0", default-features = false }
+sp-api = { version = "26.0.0", default-features = false }
+sp-application-crypto = { version = "30.0.0", default-features = false }
+sp-arithmetic = { version = "23.0.0", default-features = false }
+sp-block-builder = { version = "26.0.0", default-features = false }
+sp-blockchain = { version = "28.0.0", default-features = false }
+sp-consensus-aura = { version = "0.32.0", default-features = false }
+sp-consensus-babe = { version = "0.32.0", default-features = false }
+sp-consensus = { version = "0.32.0", default-features = false }
+sp-core = { version = "28.0.0", default-features = false }
+sp-inherents = { version = "26.0.0", default-features = false }
+sp-io = { version = "30.0.0", default-features = false }
+sp-keystore = { version = "0.34.0", default-features = false }
+sp-npos-elections = { version = "26.0.0", default-features = false }
+sp-offchain = { version = "26.0.0", default-features = false }
+sp-runtime = { version = "31.0.0", default-features = false }
+sp-session = { version = "27.0.0", default-features = false }
+sp-staking = { version = "26.0.0", default-features = false }
+sp-state-machine = { version = "0.35.0", default-features = false }
+sp-std = { version = "14.0.0", default-features = false }
+sp-storage = { version = "19.0.0", default-features = false }
+sp-timestamp = { version = "26.0.0", default-features = false }
+sp-tracing = { version = "16.0.0", default-features = false }
+sp-transaction-pool = { version = "26.0.0", default-features = false }
+sp-version = { version = "29.0.0", default-features = false }
+substrate-build-script-utils = { version = "11.0.0", default-features = false }
+substrate-prometheus-endpoint = { version = "0.17.0", default-features = false }
+substrate-wasm-builder = { version = "17.0.0", default-features = false }
+xcm-builder = { package="staging-xcm-builder", version = "7.0.0", default-features = false }
+xcm-executor = { package="staging-xcm-executor", version = "7.0.0", default-features = false }
+xcm = { package = "staging-xcm", version = "7.0.0", default-features = false}
+
+#ORML
+orml-xtokens = { version = "0.7.0", default-features = false }
+orml-traits = { version = "0.7.0", default-features = false }
+
+#Crates
+clap = { version = "4.1.8", features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false}
+derive_more = "0.99.2"
+getrandom = { version = "0.2", features = ["js"] }
+hex-literal = { version = "0.4.1" }
+jsonrpsee = { version = "0.16.2", features = ["server"] }
+lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
+log = { version = "0.4.17", default-features = false }
+safe-mix = { version = "1.0.1", default-features = false }
+scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
+serde = { version = "1.0.152", default-features = false }
+static_assertions = "1.1.0"
+smallvec = "1.9.0"
