--- a/runtimes/eden/Cargo.toml
+++ b/runtimes/eden/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
-edition = "2021"
+authors.workspace = true
+edition.workspace = true
 name = "runtime-eden"
-version = "2.4.2"
+version.workspace = true
 
 [features]
 default = ["std"]
@@ -31,6 +31,7 @@ std = [
   "pallet-reserve/std",
   "pallet-scheduler/std",
   "pallet-preimage/std",
+  "pallet-proxy/std",
   "pallet-session/std",
   "pallet-timestamp/std",
   "pallet-transaction-payment/std",
@@ -39,11 +40,10 @@ std = [
   "pallet-utility/std",
   "pallet-aura/std",
   "pallet-collator-selection/std",
-  "pallet-contracts-primitives/std",
   "pallet-contracts/std",
   "pallet-xcm/std",
   "pallet-identity/std",
-  "polkadot-parachain/std",
+  "polkadot-parachain-primitives/std",
   "polkadot-runtime-common/std",
   "xcm/std",
   "xcm-builder/std",
@@ -71,6 +71,7 @@ std = [
   "sp-io/std",
   "sp-offchain/std",
   "sp-runtime/std",
+  "sp-storage/std",
   "sp-session/std",
   "sp-staking/std",
   "sp-std/std",
@@ -78,6 +79,8 @@ std = [
   "sp-version/std",
   "sp-npos-elections/std",
   "pallet-xcm-benchmarks/std",
+  "pallet-message-queue/std",
+  "parachains-common/std"
 ]
 runtime-benchmarks = [
   "frame-benchmarking/runtime-benchmarks",
@@ -93,6 +96,7 @@ runtime-benchmarks = [
   "pallet-reserve/runtime-benchmarks",
   "pallet-scheduler/runtime-benchmarks",
   "pallet-preimage/runtime-benchmarks",
+  "pallet-proxy/runtime-benchmarks",
   "pallet-timestamp/runtime-benchmarks",
   "pallet-uniques/runtime-benchmarks",
   "pallet-nodle-uniques/runtime-benchmarks",
@@ -108,7 +112,11 @@ runtime-benchmarks = [
   "pallet-xcm-benchmarks/runtime-benchmarks",
   "cumulus-pallet-xcmp-queue/runtime-benchmarks",
   "sp-runtime/runtime-benchmarks",
-  "cumulus-pallet-parachain-system/runtime-benchmarks"
+  "cumulus-pallet-parachain-system/runtime-benchmarks",
+  "cumulus-pallet-dmp-queue/runtime-benchmarks",
+  "cumulus-primitives-core/runtime-benchmarks",
+  "pallet-message-queue/runtime-benchmarks",
+  "parachains-common/runtime-benchmarks"
 ]
 try-runtime = [
   "frame-executive/try-runtime",
@@ -132,6 +140,7 @@ try-runtime = [
   "pallet-reserve/try-runtime",
   "pallet-scheduler/try-runtime",
   "pallet-preimage/try-runtime",
+  "pallet-proxy/try-runtime",
   "pallet-session/try-runtime",
   "pallet-timestamp/try-runtime",
   "pallet-transaction-payment/try-runtime",
@@ -149,86 +158,91 @@ try-runtime = [
   "pallet-xcm/try-runtime",
   "parachain-info/try-runtime",
   "orml-xtokens/try-runtime",
-  "cumulus-pallet-parachain-system/try-runtime"
+  "cumulus-pallet-parachain-system/try-runtime",
+  "pallet-message-queue/try-runtime"
 ]
 
 [dependencies]
-static_assertions = "1.1.0"
-getrandom = { version = "0.2", features = ["js"] }
-safe-mix = { version = "1.0.1", default-features = false }
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
-hex-literal = { version = "0.4.1" }
-log = { version = "0.4.17", default-features = false }
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
-serde = { version = "1.0.152", optional = true, features = ["derive"] }
-smallvec = "1.9.0"
+static_assertions.workspace = true
+getrandom = { workspace = true, features = ["js"] }
+safe-mix = { workspace = true, default-features = false }
+codec = { workspace = true, default-features = false, features = ["derive"] }
+hex-literal.workspace = true
+log = { workspace = true, default-features = false }
+scale-info = { workspace = true, default-features = false, features = ["derive"] }
+serde = { workspace = true, optional = true, features = ["derive"] }
+smallvec.workspace = true
+lazy_static = {workspace = true, default-features = false, features = ["spin_no_std"] }
 
-lazy_static = {version = "1.4.0", default-features = false, features = ["spin_no_std"] }
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v1.0.0" }
-frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v1.0.0" }
-frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-im-online = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-offences = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-preimage = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-uniques = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
+frame-benchmarking = { workspace = true, default-features = false, optional = true }
+frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
+frame-executive = { workspace = true, default-features = false }
+frame-support = { workspace = true, default-features = false }
+frame-system = { workspace = true, default-features = false }
+frame-system-rpc-runtime-api = { workspace = true, default-features = false }
+pallet-authority-discovery = { workspace = true, default-features = false }
+pallet-authorship = { workspace = true, default-features = false }
+pallet-balances = { workspace = true, default-features = false }
+pallet-message-queue = { workspace = true, default-features = false }
+pallet-collective = { workspace = true, default-features = false }
+pallet-im-online = { workspace = true, default-features = false }
+pallet-membership = { workspace = true, default-features = false }
+pallet-multisig = { workspace = true, default-features = false }
+pallet-offences = { workspace = true, default-features = false }
+pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
+pallet-scheduler = { workspace = true, default-features = false }
+pallet-preimage = { workspace = true, default-features = false }
+pallet-proxy = { workspace = true, default-features = false }
+pallet-session = { workspace = true, default-features = false }
+pallet-timestamp = { workspace = true, default-features = false }
+pallet-transaction-payment = { workspace = true, default-features = false }
+pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
+pallet-uniques = { workspace = true, default-features = false }
+pallet-utility = { workspace = true, default-features = false }
+pallet-aura = { workspace = true, default-features = false }
+pallet-identity = { workspace = true, default-features = false }
 
-cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v1.0.0", default-features = false }
-pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
+cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
+pallet-xcm = { workspace = true, default-features = false }
+pallet-xcm-benchmarks = { workspace = true, default-features = false }
 
-pallet-contracts = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
+pallet-contracts = { workspace = true, default-features = false }
 
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-polkadot-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0" }
-cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-pallet-collator-selection = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v1.0.0" }
-sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-consensus-babe = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-npos-elections = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0" }
-frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v1.0.0", optional = true }
+polkadot-parachain-primitives = { workspace = true, default-features = false }
+polkadot-runtime-common = { workspace = true, default-features = false }
+polkadot-primitives = { workspace = true, default-features = false }
+
+xcm = { workspace = true, default-features = false}
+xcm-builder = { workspace = true, default-features = false }
+xcm-executor = { workspace = true, default-features = false }
+cumulus-pallet-aura-ext = { workspace = true, default-features = false }
+cumulus-pallet-dmp-queue = { workspace = true, default-features = false }
+cumulus-pallet-parachain-system = { workspace = true, default-features = false }
+cumulus-pallet-xcm = { workspace = true, default-features = false }
+pallet-collator-selection = { workspace = true, default-features = false }
+parachains-common = { workspace = true, default-features = false }
+cumulus-primitives-core = { workspace = true, default-features = false }
+cumulus-primitives-timestamp = { workspace = true, default-features = false }
+cumulus-primitives-utility = { workspace = true, default-features = false }
+parachain-info = { workspace = true, default-features = false }
+sp-api = { workspace = true, default-features = false }
+sp-application-crypto = { workspace = true, default-features = false }
+sp-consensus-babe = { workspace = true, default-features = false }
+sp-block-builder = { workspace = true, default-features = false }
+sp-core = { workspace = true, default-features = false }
+sp-inherents = { workspace = true, default-features = false }
+sp-io = { workspace = true, default-features = false }
+sp-offchain = { workspace = true, default-features = false }
+sp-runtime = { workspace = true, default-features = false }
+sp-storage = { workspace = true, default-features = false }
+sp-session = { workspace = true, default-features = false }
+sp-staking = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = false }
+sp-transaction-pool = { workspace = true, default-features = false }
+sp-version = { workspace = true, default-features = false }
+sp-npos-elections = { workspace = true, default-features = false }
+sp-consensus-aura = { workspace = true, default-features = false }
+frame-try-runtime = { workspace = true, default-features = false, optional = true }
 primitives = { default-features = false, path = "../../primitives" }
 pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
 pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
@@ -236,7 +250,9 @@ pallet-grants = { default-features = false, path = "../../pallets/grants" }
 pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
 pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
 pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }
-orml-xtokens = { git = "https://github.com/NodleCode/open-runtime-module-library.git", branch = "polkadot-v1.0.0", default-features = false }
-orml-traits = { git = "https://github.com/NodleCode/open-runtime-module-library.git", branch = "polkadot-v1.0.0", default-features = false }
+
+orml-xtokens = { workspace = true, default-features = false }
+orml-traits = { workspace = true, default-features = false }
+
 [build-dependencies]
-substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
+substrate-wasm-builder.workspace = true
