--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,8 +98,8 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
 
-  try-runtime-prepare:
-    runs-on: ubuntu-latest-8-cores
+  try-runtime:
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -116,22 +116,6 @@ jobs:
         uses: mozilla-actions/sccache-action@v0.0.4
       - name: Build runtime
         run: cargo build --release --features=try-runtime -p runtime-eden
-      - name: Upload runtime artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: try_runtime
-          path: target/release/wbuild/runtime-eden/runtime_eden.wasm
-
-  try-runtime-execute:
-    runs-on: ubuntu-latest
-    needs: try-runtime-prepare
-
-    steps:
-      - name: Download runtime artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: try_runtime
-          path: try_runtime
       - name: Check Version
         run: |
           echo -n "eden_rev=" >> $GITHUB_OUTPUT
@@ -143,27 +127,17 @@ jobs:
              }' | jq .result.specVersion | sed 's/^/try-runtime-snapshot-eden-spec-/' >> $GITHUB_OUTPUT
            cat $GITHUB_OUTPUT
         id: get_version
-      - name: Setup cache
-        uses: actions/cache@v3
-        id: cachedir
-        with:
-          path: snapshots
-          key: ${{steps.get_version.outputs.eden_rev}}
-      - name: Ensure cache directory is created
-        if: steps.cachedir.outputs.cache-hit != 'true'
-        run: |
-          install -d snapshots
-          date > snapshots/created_at
+      - uses: robinraju/release-downloader@v1.9
+        with: 
+          repository: "NodleCode/eden-snapshot"
+          latest: true
+          fileName: "eden-snapshot-full"
+          out-file-path: "snaps"
+          extract: false
       - name: Run try-runtime
-        uses: NodleCode/action-try-runtime@v0.5.1
+        uses: NodleCode/action-try-runtime/check@v0.6.1
         with:
-          url: ${{ env.try-runtime-uri}}${{ secrets.DWELLIR_API_KEY}}
-          snap: snapshots/eden-snapshot-full
-          runtime: try_runtime/runtime_eden.wasm
+          snap: snaps/eden-snapshot-full
+          runtime: target/release/wbuild/runtime-eden/runtime_eden.wasm
           checks: "all"
           options: "--disable-idempotency-checks"
-      - name: Upload snap artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: edensnap
-          path: snapshots/eden-snapshot-full
