Remove deprecated from_genesis()

--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -27,6 +27,7 @@ derive_more.workspace = true
 log = { workspace = true, default-features = true}
 codec.workspace = true
 serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 
 # RPC related Dependencies
 jsonrpsee = { workspace = true, features = ["server"] }
