--- a/Cargo.toml
+++ b/Cargo.toml
@@ -138,5 +138,6 @@ log = { version = "0.4.17", default-features = false }
 safe-mix = { version = "1.0.1", default-features = false }
 scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
 serde = { version = "1.0.152", default-features = false }
+serde_json = { version = "1.0.104", default-features = false }
 static_assertions = "1.1.0"
 smallvec = "1.9.0"
